--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
         <version>1.4.1.RELEASE</version>
     </parent>
 
-    <!-- Additional lines to be added here... -->
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
