--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,18 @@
             <artifactId>json-path</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+        	<groupId>org.springframework.data</groupId>
+        	<artifactId>spring-data-mongodb</artifactId>
+        </dependency>
+        <dependency>
+        	<groupId>org.springframework.social</groupId>
+        	<artifactId>spring-social-facebook</artifactId>
+        </dependency>
+        <dependency>
+        	<groupId>org.springframework.social</groupId>
+        	<artifactId>spring-social-core</artifactId>
+        </dependency>
     </dependencies>
 
     <properties>
